--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:3B39sIWcyCzLvGmmCu++cjuyci+NrOh0XdKCgsMfh8M=
+APP_KEY=base64:Ba9JIUznG/PRMXI6kwPBHjDxFdIPPISdg5NiK8V15VE=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,9 +9,9 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=hazidoga2
+DB_DATABASE=hazidoga
 DB_USERNAME=root
 DB_PASSWORD=
 
